<resources>
    <string name="app_name">tools store</string>
    <string name="hint_tool_name">edit a new tool</string>
    <string name="tool_name">Tool name</string>
    <string name="use_in">use in</string>
    <string name="edit_use_in">Use in</string>
    <string name="hint_use_in">things to do with this tool</string>
    <string name="quantity">Quantity</string>
    <string name="edit_quantity">quantity</string>
    <string name="hint_quantity">the quantity of this tool</string>
    <string name="decreasing_button">-</string>
    <string name="increasing_button">+</string>
    <string name="supplier">Supplier</string>
    <string name="price">Price</string>
    <string name="hint_price">edit tool price</string>
    <string name="hint_supplier_name">the name of supplier</string>
    <string name="hint_contact_supplier">supplier contact details</string>
    <string name="empty_store_text_1">your store is empty</string>
    <string name="empty_store_text_2">click on + photo down</string>
    <string name="empty_store_text_3">for adding a new tool</string>
    <string name="action_delete_all_entries">Delete All Tools</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="editor_activity_title_new_tool">Add a Tool</string>
    <string name="editor_activity_title_edit_tool">Edit Tool</string>
    <string name="editor_insert_tool_failed">Error with saving Tool</string>
    <string name="editor_insert_tool_successful">Tool saved</string>
    <string name="editor_update_tool_failed">Error with updating Tool</string>
    <string name="editor_update_tool_successful">Tool updated</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this tool?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_tool_failed">Error with deleting Tool</string>
    <string name="editor_delete_tool_successful">Tool deleted</string>
    <string name="unknown_tool">Unknown Tool</string>
    <string name="sale">Sale</string>
    <string name="there_is_no_tool">there is no tool</string>
    <string name="tool"> Tool</string>
    <string name="tools"> Tools</string>
    <string name="enter_tool_name">Tool Name Required</string>
    <string name="enter_tool_quantity">The Quantity Of This Tool Required</string>
    <string name="negative_values_are_not_accepted">Negative values are not accepted</string>
    <string name="failed_to_update">Failed to update</string>
    <string name="editor_activity_missing_fields">You left some fields empty. Please try again!</string>
</resources>
