<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditorActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/LinearLayout_margin_top"
            android:layout_marginLeft="@dimen/LinearLayout_margin_left">
            <TextView
                android:text="@string/tool_name"
                style="@style/CategoryStyle" />
            <EditText
              android:id="@+id/edit_tool_name"
                android:hint="@string/hint_tool_name"
                style="@style/EditorFieldStyle"
                android:layout_marginLeft="@dimen/edit_name_margin_left"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/LinearLayout_margin_top"
            android:layout_marginLeft="@dimen/LinearLayout_margin_left">
            <TextView
                android:text="@string/use_in"
                style="@style/CategoryStyle" />
            <EditText
                android:id="@+id/edit_use_in"
                android:hint="@string/hint_use_in"
                style="@style/EditorFieldStyle"
                android:layout_marginLeft="@dimen/edit_uses_margin_left"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/LinearLayout_margin_top"
            android:layout_marginLeft="@dimen/LinearLayout_margin_left">
            <TextView
                android:text="@string/price"
                style="@style/CategoryStyle" />
            <EditText
                android:id="@+id/edit_price"
                android:hint="@string/hint_price"
                style="@style/EditorFieldStyle"
                android:layout_marginLeft="@dimen/edit_price_margin_left"
                android:inputType="numberDecimal"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/LinearLayout_margin_top"
            android:layout_marginLeft="@dimen/LinearLayout_margin_left">
            <TextView
                android:text="@string/quantity"
                style="@style/CategoryStyle" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginRight="60dp">
           <Button
               android:layout_width="@dimen/button_width_height"
               android:layout_height="@dimen/button_width_height"
               android:id="@+id/dec_quantity"
               android:text="@string/decreasing_button"
               android:layout_marginLeft="25dp"
               android:layout_weight="0"
               android:onClick="decrement"/>
            <EditText
                android:id="@+id/edit_quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="0"
                android:gravity="center"
                android:layout_weight="1"
                android:inputType="number"/>
            <Button
                android:layout_width="@dimen/button_width_height"
                android:layout_height="@dimen/button_width_height"
                android:id="@+id/inc_quantity"
                android:text="@string/increasing_button"
                android:layout_weight="0"
                android:onClick="increment"/>
            </LinearLayout>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/supplier"
                style="@style/CategoryStyle"
                android:text="@string/supplier"
                android:layout_marginTop="@dimen/supplier_margin_top" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_toRightOf="@+id/supplier"
                android:layout_marginLeft="@dimen/supplier_details_margin_top">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="name"/>
                <EditText
                    android:id="@+id/edit_supplier_name"
                    style="@style/EditorFieldStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_supplier_name"
                    android:layout_marginLeft="@dimen/supplier_name_margin_left"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="contact"/>
                <EditText
                    android:id="@+id/edit_supplier_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_contact_supplier"
                    android:layout_marginLeft="@dimen/supplier_contact_margin_left"
                    android:inputType="number"/>
            </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
        <Button
            android:id="@+id/order_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="order"
            android:onClick="orderProductFromSupplier"
        />
    </LinearLayout>

