<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/container_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/tool_name_show"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/tool_name"
        android:layout_marginTop="@dimen/LinearLayout_margin_top"
        android:layout_marginLeft="@dimen/LinearLayout_margin_left"
        />
    <TextView
        android:id="@+id/price_show"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:layout_marginTop="@dimen/LinearLayout_margin_top"
        />


    <TextView
        android:id="@+id/quantity_show"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:layout_marginTop="@dimen/LinearLayout_margin_top"
        />
    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="5dp"

        >

        <Button
            android:id="@+id/sale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="sale"
            />
    </RelativeLayout>


</LinearLayout>