<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CatalogActivity">

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <RelativeLayout
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/relative_layout_height"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/empty_store_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/tools_photo"/>

        <TextView
            android:id="@+id/empty_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/empty_store_image"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-medium"
            android:paddingTop="@dimen/activity_catalog_text_paddingTop"
            android:text="@string/empty_store_text_1"
            android:textAppearance="?android:textAppearanceMedium"/>

        <TextView
            android:id="@+id/empty_subtitle_text_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/empty_title_text"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif"
            android:paddingTop="@dimen/text_2_paddingTop"
            android:text="@string/empty_store_text_2"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/emptiy_list_subtitle"/>
        <TextView
            android:id="@+id/empty_subtitle_text_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/empty_subtitle_text_2"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif"
            android:paddingTop="@dimen/text_3_paddingTop"
            android:text="@string/empty_store_text_3"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/emptiy_list_subtitle"/>
    </RelativeLayout>

       <ImageView
        android:id="@+id/adding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/list_item_adding_margin"
        android:src="@drawable/adding"/>
</RelativeLayout>
